--- a/astro/src/pages/[lang]/stories.astro
+++ b/astro/src/pages/[lang]/stories.astro
@@ -17,7 +17,7 @@ export async function getStaticPaths() {
     .map((story) => {
       const { path, lang } = metaFromFile(story.file);
       return {
-        path,
+        path: '/' + path,
         lang,
         ...story.frontmatter,
       };
@@ -42,12 +42,8 @@ export async function getStaticPaths() {
   });
 }
 
-const { lang } = Astro.params;
 const { stories, microcopy } = Astro.props;
-const locale = {
-  code: lang,
-  dir: 'ltr',
-};
+const { locale } = microcopy;
 
 const featuredIndex = stories.findIndex((s) => s?.featured);
 const featured = stories[featuredIndex];
