--- a/astro/src/pages/[lang]/stories/[page].astro
+++ b/astro/src/pages/[lang]/stories/[page].astro
@@ -3,7 +3,7 @@ import type { CTA } from '$types/content';
 import Article from '$layouts/article.astro';
 import TOC from '$components/TOC.svelte';
 import Published from '$components/Published.svelte';
-import StoryHero from '$components/StoryHero.svelte';
+import StoryBanner from '$components/stories/StoryBanner.svelte';
 import { renderMarkdown } from '$$markdown';
 import { metaFromFile } from '$$data';
 import { getMicrocopy } from '$$microcopy';
@@ -43,27 +43,14 @@ const { locale } = microcopy;
 const cta: CTA = {
   text: microcopy.microcopy.breadcrumbs.replace('((t))', 'Stories'),
   url: `/${locale.code}/stories`,
+  type: 'link',
+  direction: 'back',
 };
-
-// const theme = meta?.theme || {};
-
-// const hero = {};
-
-// if (meta.hero) {
-//   hero.url = meta.hero.image;
-//   hero.alt = meta.hero.alt;
-// }
-console.log(meta);
 ---
 
 <Article title={meta.title} metadesc={meta.metadesc} microcopy={microcopy}>
   <Fragment slot="header">
-    <StoryHero
-      title={meta.title}
-      section={meta.tags[0]}
-      cta={cta}
-      form="header"
-    />
+    <StoryBanner story={meta} cta={cta} />
   </Fragment>
   <!-- Hero image -->
   {
