--- a/astro/src/layouts/news.astro
+++ b/astro/src/layouts/news.astro
@@ -89,6 +89,11 @@ const { locale } = microcopy;
         height: 100%;
       }
     }
+
+    &--item {
+      width: 100%;
+      height: 100%;
+    }
   }
 
   .wrapper {
