--- a/astro/src/pages/[lang]/search.astro
+++ b/astro/src/pages/[lang]/search.astro
@@ -4,6 +4,7 @@ import { search } from '$lib/search';
 import Wrapper from '$layouts/wrapper.astro';
 import Card from '$components/Card.svelte';
 import Pagination from '$components/Pagination.svelte';
+import Search from '$components/Search.svelte';
 
 export const prerender = false;
 
@@ -46,22 +47,7 @@ if (found.length > 10) {
           </p>
         )
       }
-      <form class="search" action={`/${locale.code}/search`}>
-        <input
-          class="search--input"
-          type="search"
-          name="q"
-          aria-label={s.placeholder}
-          placeholder={s.placeholder}
-        />
-        <input type="hidden" name="locale" value={locale.code} />
-        <input type="hidden" name="page" value="1" />
-        <button aria-label={s.placeholder} class="search--button">
-          <svg role="img" aria-hidden="true" class="icon">
-            <use href="/images/icons/sprite.svg#search"></use>
-          </svg>
-        </button>
-      </form>
+      <Search label={s.placeholder} locale={locale} />
 
       <!-- If there are results, display them -->
       {
@@ -122,28 +108,5 @@ if (found.length > 10) {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-  }
-
-  .search {
-    display: grid;
-    grid-template-columns: 1.5rem auto;
-    grid-auto-flow: dense;
-    gap: 0.5rem;
-    background: var(--white);
-    padding: 0.5rem;
-    width: 100%;
-    // max-width: 50ch;
-
-    &--input {
-      grid-column: 2;
-      background: none;
-      border: 0;
-    }
-
-    &--button {
-      padding: 0;
-      border: 0;
-      background: none;
-    }
   }
 </style>
