--- a/astro/src/sass/globals/_vars.scss
+++ b/astro/src/sass/globals/_vars.scss
@@ -33,8 +33,8 @@ $anchor-color--hover: var(--blue-900);
 $anchor-color--visited: var(--purple-900);
 
 //Header
-$bkpt-map--header--large: (
-  'en': 843px,
+$bkpt-lang-headers: (
+  'en': 879px,
   'es': 926px,
 );
 
