Add theme initialization to all pages
Initially just a swap between light and dark, but can optionally have more later

--- a/astro/src/layouts/wrapper.astro
+++ b/astro/src/layouts/wrapper.astro
@@ -87,6 +87,11 @@ const microcopy = getMicrocopy(locale.code);
     <SubscribeFooter lang={locale.code} />
     <Footer lang={locale.code} />
 
+    <script>
+      import { theme } from '$js/theme';
+      theme.init();
+    </script>
+
     <!-- Cookie Disclaimer -->
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
