--- a/astro/src/pages/[lang]/news.astro
+++ b/astro/src/pages/[lang]/news.astro
@@ -1,11 +1,14 @@
 ---
 import { buildPostsFromGlob } from '$lib/posts';
 import News from '$layouts/news.astro';
+import { getCardData } from '$lib/sanity';
 
 /**
  * Builds paths for news landing page
  */
 export async function getStaticPaths() {
+  const api = await getCardData('post');
+  console.log(api);
   const posts = await Astro.glob('../../markdown/**/posts/*.md');
   return buildPostsFromGlob(posts)
     .filter((r) => r.params.page === 0)
