--- a/astro/src/pages/[lang]/news.astro
+++ b/astro/src/pages/[lang]/news.astro
@@ -1,30 +1,34 @@
 ---
-import { buildPostsFromGlob } from '$lib/posts';
 import News from '$layouts/news.astro';
-import { getCardData } from '$lib/sanity';
+import { microcopy, getPosts } from '$lib/sanity';
+import type { Post } from '$types/sanity';
 
 /**
  * Builds paths for news landing page
  */
 export async function getStaticPaths() {
-  const api = await getCardData('post');
-  console.log(api);
-  const posts = await Astro.glob('../../markdown/**/posts/*.md');
-  return buildPostsFromGlob(posts)
-    .filter((r) => r.params.page === 0)
-    .map((a) => {
-      delete a.params.page;
-      return a;
-    });
+  const p = await getPosts();
+
+  return Object.entries(p).map(([lang, posts]: [string, Array<Post>]) => {
+    const pages = Math.ceil(posts.length / 10);
+    const featured = posts.find((p) => p.featured);
+    const filtered = posts.filter((p) => p._slug !== featured._slug);
+    return {
+      params: {
+        lang: filtered[0]._langCode,
+      },
+      props: {
+        featured,
+        posts: filtered,
+        microcopy: microcopy[lang],
+        page: 0,
+        pages,
+      },
+    };
+  });
 }
 
-const { posts, microcopy, featured, pages } = Astro.props;
+const { posts, microcopy: mc, featured, pages } = Astro.props;
 ---
 
-<News
-  featured={featured}
-  posts={posts}
-  microcopy={microcopy}
-  page={0}
-  pages={pages}
-/>
+<News featured={featured} posts={posts} microcopy={mc} page={0} pages={pages} />
