--- a/astro/src/pages/[lang]/news/[page].astro
+++ b/astro/src/pages/[lang]/news/[page].astro
@@ -1,28 +1,22 @@
 ---
-import { buildPostsFromGlob } from '$lib/posts';
 import News from '$layouts/news.astro';
+import { buildPostPagination } from '$lib/posts';
 
 /**
- * Builds paths for news pagination
+ * Builds paths for news landing page
  */
 export async function getStaticPaths() {
-  const posts = await Astro.glob('../../../markdown/**/posts/*.md');
-  return buildPostsFromGlob(posts)
-    .filter((r) => r.params.page !== 0)
-    .map((r) => {
-      r.params.page++;
-      return r;
-    });
+  return buildPostPagination();
 }
 
 const { page } = Astro.params;
-const { posts, microcopy, featured, pages } = Astro.props;
+const { posts, microcopy: mc, featured, pages } = Astro.props;
 ---
 
 <News
   featured={featured}
   posts={posts}
-  microcopy={microcopy}
+  microcopy={mc}
   page={page}
   pages={pages}
 />
