--- a/astro/src/sass/components/_message.scss
+++ b/astro/src/sass/components/_message.scss
@@ -26,19 +26,19 @@
     mask-size: 100%;
   }
 
-  &--note {
+  &[data-type='warning'] {
     --message-icon: url('/images/icons/sprite.svg#note-sign');
     background-color: var(--yellow-50);
     border-color: var(--yellow-600);
   }
 
-  &--warning {
+  &[data-type='error'] {
     --message-icon: url('/images/icons/sprite.svg#warning-sign');
     background-color: var(--red-50);
     border-color: var(--red-600);
   }
 
-  &--tip {
+  &[data-type='tip'] {
     --message-icon: url('/images/icons/sprite.svg#tip-sign');
     background-color: var(--green-50);
     border-color: var(--green-600);
