--- a/astro/src/pages/[lang]/posts/[page].astro
+++ b/astro/src/pages/[lang]/posts/[page].astro
@@ -1,77 +1,80 @@
 ---
-import type { Theme, HeroMedia, CTA } from '$types/content';
 import Article from '$layouts/article.astro';
 import TOC from '$components/TOC.svelte';
 import Published from '$components/Published.svelte';
 import Authors from '$components/Authors.svelte';
-import YouTube from '$components/YouTube.svelte';
 import PostHero from '$components/PostHero.svelte';
-import { renderMarkdown } from '$$markdown';
-import { metaFromFile } from '$$data';
-import { getMicrocopy } from '$$microcopy';
-import { getAuthors } from '$lib/authors';
+import { posts, microcopy as micro } from '$lib/sanity';
+import type { PostHeroProps } from '$components/PostHero.svelte';
+import PortableText from '$components/PortableText.astro';
+import { buildTOC } from '$lib/portabletext';
 
 /**
  * Builds paths for news pagination
  */
 export async function getStaticPaths() {
-  const posts = await Astro.glob('../../../markdown/**/posts/*.md');
   return await Promise.all(
     posts.map(async (post) => {
-      const { slug, lang } = metaFromFile(post.file);
-      const { content, toc } = await renderMarkdown(post.rawContent());
-
-      post.frontmatter.date = new Date(post.frontmatter.date);
       return {
         params: {
-          lang,
-          page: slug.replace(/^posts\//, ''),
+          lang: post._langCode,
+          page: post._slug,
         },
         props: {
-          content,
-          toc,
-          meta: post.frontmatter,
-          microcopy: getMicrocopy(lang),
+          post,
+          microcopy: micro[post._lang],
         },
       };
     }),
   );
 }
 
-const { content, toc, meta, microcopy } = Astro.props;
+const { post, microcopy } = Astro.props;
 const { locale } = microcopy;
 
-const cta: CTA = {
-  text: microcopy.microcopy.breadcrumbs.replace(
-    '((t))',
-    microcopy.news.posts.title,
-  ),
-  url: `/${locale.code}/news`,
+// const cta: CTA = {
+//   text: microcopy.microcopy.breadcrumbs.replace(
+//     '((t))',
+//     microcopy.news.posts.title,
+//   ),
+//   url: `/${locale.code}/news`,
+// };
+
+// const theme = meta?.theme || {};
+
+// const hero = {};
+
+// if (meta.hero) {
+//   hero.url = meta.hero.image;
+//   hero.alt = meta.hero.alt;
+// }
+
+const hero = {
+  title: post.title,
+  theme: post.theme,
+  form: 'header',
+  media: post.hero,
+  cta: {
+    text: microcopy.actions.back.replace('((a))', 'News'), // TODO: Replace with proper data pull from CMS
+    url: `/${locale.code}/news`,
+  },
+} as PostHeroProps;
+
+const authors = {
+  authors: post.author,
+  label: microcopy.meta.authored,
+  wrapper: 'section',
 };
 
-const theme = meta?.theme || {};
-
-const hero = {};
-
-if (meta.hero) {
-  hero.url = meta.hero.image;
-  hero.alt = meta.hero.alt;
-}
+const toc = buildTOC(post.body);
 ---
 
-<Article title={meta.title} metadesc={meta.metadesc} microcopy={microcopy}>
+<Article title={post.title} metadesc={post.description} microcopy={microcopy}>
   <Fragment slot="header">
-    <PostHero
-      title={meta.title}
-      section={meta.tags[0]}
-      theme={theme as Theme}
-      media={hero as HeroMedia}
-      cta={cta}
-      form="header"
-    />
+    <PostHero {...hero} />
   </Fragment>
   <!-- YouTube embed -->
-  {
+  <!-- {
     meta?.hero?.youtube && (
       <YouTube
         client:load
@@ -81,24 +84,21 @@ if (meta.hero) {
         label={microcopy.microcopy.loadVideo}
       />
     )
-  }
+  } -->
   <!-- Main content area -->
-  <Fragment slot="content" set:html={content} />
+  <PortableText body={post.body} slot="content" />
+  <!-- <Fragment slot="content" set:html={content} /> -->
   <!-- Extras sidegar -->
   <Fragment slot="extras">
     <!-- Author Info -->
-    <Authors
-      authors={getAuthors(meta.authors)}
-      label={microcopy.microcopy.posted}
-      wrapper="section"
-    />
+    <Authors {...authors} />
     <!-- Published date info -->
     <Published
       locale={locale.code}
-      label={meta.updated
-        ? microcopy.microcopy.lastUpdated
-        : microcopy.microcopy.datePosted}
-      date={meta.updated || meta.date}
+      label={post.dates.updated
+        ? microcopy.meta.updated
+        : microcopy.meta.posted}
+      date={post.dates.updated || post.dates.published}
       wrapper="section"
     />
 
